<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightseagreen"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="30dp"
        android:textColor="@color/blue"
        android:layout_weight="1"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre"
        android:textSize="30dp"
        android:inputType="textPersonName"
        android:layout_weight="1"
        android:id="@+id/eNombre"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textSize="30dp"
            android:textColor="@color/blue"
            android:layout_weight="1"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_correo"
            android:textSize="30dp"
            android:inputType="textPersonName"
            android:layout_weight="1"
            android:id="@+id/eCorreo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textSize="30dp"
            android:textColor="@color/blue"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_telefono"
            android:textSize="30dp"
            android:inputType="textPersonName"
            android:layout_weight="1"
            android:id="@+id/eTelefono"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/button"
        android:layout_gravity="center"
        android:background="@color/lightblue"
        android:id="@+id/bBoton"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="30dp"
        android:textColor="@color/darkgoldenrod"
        android:id="@+id/tNombre"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textSize="30dp"
        android:textColor="@color/darkgoldenrod"
        android:id="@+id/tCorreo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:textSize="30dp"
        android:textColor="@color/darkgoldenrod"
        android:id="@+id/tTelefono"/>
</LinearLayout>